--- a/Assignment 3/rpisystem/app/src/Components/basic-sidenav.css
+++ b/Assignment 3/rpisystem/app/src/Components/basic-sidenav.css
@@ -3,7 +3,7 @@
     margin: 0;
     background-color:#443c3e;
     padding:30px;
-    height: calc(100vh - 60px);
+    min-height: calc(100vh - 60px);
 }
 
 .sidebar p {
@@ -38,7 +38,7 @@
     border-bottom: 1px solid #7b6e7238;
 }
 
-.link:hover {
+.link:hover, .link:active {
     text-decoration:none;
     color: #dc1a50;
 }
