refactoring app page

--- a/Assignment 3/rpisystem/app/src/App.css
+++ b/Assignment 3/rpisystem/app/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -6,8 +6,6 @@
   height: 30vmin;
   pointer-events: none;
 }
-
-
 
 .App-header {
   background-color: #fefefe;
@@ -30,7 +28,7 @@
   display:block;
   position:sticky;
   bottom:0px;
-}
+} */
 
 .column_stack.card-columns {margin-top:50px;}
 .column_stack.card-columns svg {width:70px;height:70px;display:block;margin: 10px auto 20px;}
@@ -38,12 +36,6 @@
 .column_stack.card-columns .card:hover {border: 1px solid #9E9E9E;}
 .column_stack.card-columns .card:hover .card-header {opacity:0.8;color:#f7e7e9;}
 
-
-
-
-.checkout-form{
-  display: block;
-}
 .h1, h1 {
   font-size: 1.7rem !important;
 }
