Update Some Frontend

--- a/Assignment 3/rpisystem/app/src/Components/basic-navbar.css
+++ b/Assignment 3/rpisystem/app/src/Components/basic-navbar.css
@@ -22,4 +22,4 @@ nav.navbar-light {border-radius:0px;}
   position: relative;
   right: 100px;
 }
-
+a.brand.navbar-brand {position:relative;top:-7px;}
