--- a/Assignment 3/rpisystem/app/src/App.css
+++ b/Assignment 3/rpisystem/app/src/App.css
@@ -1,35 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 30vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #fefefe;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #333333;
-}
-
-.App-link {
-  color: #61dafb;
-}
-.App-intro {
-
-  background:#bc1142;
-  color: white;
-  display:block;
-  position:sticky;
-  bottom:0px;
-} */
-
 .column_stack.card-columns {margin-top:50px;}
 .column_stack.card-columns svg {width:70px;height:70px;display:block;margin: 10px auto 20px;}
 .column_stack.card-columns .card {margin-bottom:25px;text-align:center;font-size:1.2em;padding-bottom:20px;}
@@ -41,3 +9,7 @@
 }
 
 .inventory.row {margin-right:0px;}
+body {background:url("./cream_dust.png");}
+
+.access_card .jumbotron {background-color:#27252514;margin:30px;text-align:center;}
+.access_card svg {font-size:6em;color:#3c3737b8;margin:10px;}
